k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api       
            pathType: Prefix           # все, що починається з `/api` буде направлено на сервіс demo-service. Альтернативно можна використовувати `Exact` та `ImplementationSpecific`
            backend:
              service:
                name: service-service # ім'я сервісу
                port:
                  number: 3000     
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
